--- a/index.html
+++ b/index.html
@@ -3,10 +3,195 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Глейси</title>
+    <link href="css/normalize.css" rel="stylesheet">
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
-
+    <header class="page-header">
+      <div class="page-header__inner">
+        <div class="page-header__top">
+          <a class="page-header__logo">
+            <img src="img/logo.svg" width="154" height="64" alt="Логотип Глейси">
+          </a>
+          <nav class="header-nav">
+            <ul class="header-nav__list">
+              <li class="header-nav__item"><a href="catalog.html">Каталог</a></li>
+              <li class="header-nav__item"><a href="blank.html">Доставка и оплата</a></li>
+              <li class="header-nav__item"><a href="blank.html">О компании</a></li>
+            </ul>
+            <ul class="header-nav__list header-nav__list--user">
+              <li class="header-nav__item header-nav__item--user header-nav__item--search"><a href=""></a>Поиск</li>
+              <li class="header-nav__item header-nav__item--user header-nav__item--login"><a href=""></a>Вход</li>
+              <li class="header-nav__item header-nav__item--user header-nav__item--basket"><a href=""></a>Корзина</li>
+            </ul>
+          </nav>
+        </div>
+        <div class="page-header__contacts">
+          <p>с 10 до 20, ежедневно</p>
+          <a href="tel:+78124502525">8 812 450-25-25</a>
+        </div>
+      </div>
+    </header>
+    <main>
+      <h1 class="visually-hidden">Магазин мороженого</h1>
+      <section class="offers">
+        <div class="offers__inner">
+          <h2 class="visually-hidden">Предложения</h2>
+          <div class="slider">
+            <div class="slider-inner">
+              <input class="slider-input slider-input-1" type="radio" id="slider-1" name="toggle" checked>
+              <label class="slider-label slider-label-1" for="slider-1" aria-label="Слайдер1"></label>
+              <input class="slider-input slider-input-2" type="radio" id="slider-2" name="toggle">
+              <label class="slider-label slider-label-2" for="slider-2" aria-label="Слайдер1"></label>
+              <input class="slider-input slider-input-3" type="radio" id="slider-3" name="toggle">
+              <label class="slider-label slider-label-3" for="slider-3" aria-label="Слайдер1"></label>
+              <div class="slider-slides slide-slides-1">
+                <div class="slide-content">
+                  <h3>Крем-брюле и пломбир с малиновым джемом</h3>
+                  <a href="blank.html">Давайте оба!</a>
+                </div>
+                <figure class="slide-img">
+                  <img src="img/ice-cream-1.png" width="647" height="584" alt="Крем-брюле и пломбир с малиновым джемом">
+                </figure>
+              </div>
+              <div class="slider-slides slide-slides-2">
+                <div class="slide-content">
+                  <h3>Шоколадный пломбир и лимонный сорбет</h3>
+                  <a href="blank.html">Давайте оба!</a>
+                </div>
+                <figure class="slide-img">
+                  <img src="img/ice-cream-2.png" width="644" height="583" alt="Крем-брюле и пломбир с малиновым джемом">
+                </figure>
+              </div>
+              <div class="slider-slides slide-slides-3">
+                <div class="slide-content">
+                  <h3>Пломбир с помадкой и клубничный щербет</h3>
+                  <a href="blank.html">Давайте оба!</a>
+                </div>
+                <figure class="slide-img">
+                  <img src="img/ice-cream-3.png" width="639" height="582" alt="Крем-брюле и пломбир с малиновым джемом">
+                </figure>
+              </div>
+            </div>
+          </div>
+          <div class="stocks">
+            <div class="stock stock-1">
+              <h3>Малинка даром!</h3>
+              <p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку маринового варенья бесплатно.</p>
+              <a class="stock-btn"> href="blank.html">Хочу варенье!</a>
+            </div>
+            <div class="stock stock-2">
+              <h3>Шоколадки даром!</h3>
+              <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
+              <a class="stock-btn" href="blank.html">Хочу шокладки!</a>
+            </div>
+          </div>
+          <div class="hit">
+            <ul class="hit__list">
+              <li class="hit__item">
+                <article class="hit__inner">
+                  <h3 class="hit__title">Сливочное с апельсиновым джемом и цитрусовой стружкой</h3>
+                  <p class="hit__price">310 ₽<span>/кг</span></p>
+                  <div class="hit__img">
+                    <img src="img/hit-1.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
+                  </div>
+                </article>
+              </li>
+              <li class="hit__item">
+                <article class="hit__inner">
+                  <h3 class="hit__title">Сливочно-кофейное с кусочками шоколада</h3>
+                  <p class="hit__price">380 ₽<span>/кг</span></p>
+                  <div class="hit__img">
+                    <img src="img/hit-2.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
+                  </div>
+                </article>
+              </li>
+              <li class="hit__item">
+                <article class="hit__inner">
+                  <h3 class="hit__title">Сливочно-клубничное с присыпкой из белого шоколада</h3>
+                  <p class="hit__price">355 ₽<span>/кг</span></p>
+                  <div class="hit__img">
+                    <img src="img/hit-3.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
+                  </div>
+                </article>
+              </li>
+              <li class="hit__item">
+                <article class="hit__inner">
+                  <h3 class="hit__title">Сливочное крем-брюле с карамельной подливкой</h3>
+                  <p class="hit__price">415 ₽<span>/кг</span></p>
+                  <div class="hit__img">
+                    <img src="img/hit-4.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
+                  </div>
+                </article>
+              </li>
+            </ul>
+          </section>
+        </div>
+      </div>
+      <section class="info">
+        <div class="info__inner">
+          <h2 class="info__title">Магазин Глэйси – это онлайн и офлайн-магазин по продаже мороженого собственного проиводства на развес</h2>
+          <div class="info__block">
+            <p class="info__text-1">Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</p>
+            <p class="info__text-2">Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</p>
+          </div>
+          <div class="info__block">
+            <p class="info__text-3">Доставка нашего мороженного до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</p>
+            <p class="info__text-4">Закупка ингредиентов производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
+          </div>
+        </div>
+      </section>
+      <div class="addition">
+        <div class="addition__inner">
+          <article class="advice">
+            <div class="advice__wrap">
+              <h3 class="advice__title">Новое в нашем блоге</h3>
+              <a class="advice__link" href="blank.html">10 способов сервировки фруктовых щербетов к столу</a>
+            </div>
+          </article>
+          <div class="subscription">
+            <div class="subscription__wrap">
+              <div class="subscription__inner">
+                <p class="subscription__text">Подпишитесь на нашу сладкую рассылку и будьте всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
+                <form class="subscription__form" action="https://echo.htmlacademy.ru/" method="post">
+                  <input class="subscription__input" type="text" name="email" id="email" placeholder="email@example.com">
+                  <button type="submit">Отправить</button>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <section class="address">
+        <div class="address__inner">
+          <div class="address__details">
+            <p>Адрес главного офиса и офлайн-магазина:</p>
+            <address>ул. Большая Конюшенная, 19/8, Санкт-Петербург</address>
+            <p>Для заказов по телефону:</p>
+            <a href="tel:+78124502525">8 812 450-25-25</a>
+            <p>(с 10 до 20 ежедневно)</p>
+            <button class="address__feedback-btn">Форма обратной связи</button>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer class="footer">
+      <div class="footer__inner">
+        <ul class="footer__socials-list">
+          <li class="socials__item"><a href="blank.html">Фейсбук</a></li>
+          <li class="socials__item"><a href="blank.html">В</a></li>
+          <li class="socials__item"><a href="blank.html">Инстаграмм</a></li>
+          <li class="socials__item"><a href="blank.html">Твиттер</a></li>
+        </ul>
+        <ul class="footer__block-group">
+          <li class="footer__block-item"><a href="blank.html">Для поставщиков</a></li>
+          <li class="footer__block-item"><a href="blank.html">О производстве</a></li>
+          <li class="footer__block-item"><a href="blank.html">Наши документы</a></li>
+          <li class="footer__block-item"><a href="blank.html">Экологические стандарты</a></li>
+        </ul>
+        <div class="footer__copyright">
+          <p>Сделано в HTML Academy © 2019</p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
