--- a/index.html
+++ b/index.html
@@ -29,12 +29,15 @@
             </ul>
             <ul class="header-nav__list header-nav__list--user">
               <li class="header-nav__item header-nav__item--user header-nav__item--search">
-                <button class="header-nav__search-btn" type="button" aria-label="Поиск"></button>
+                <button class="header-nav__search-btn" type="button" aria-label="Поиск">
+                  <svg width="17" height="17" viewBox="0 0 17 17"><path fill="#fff" d="M16.958 15.527L11.75 10.32A6.455 6.455 0 0 0 13 6.5 6.5 6.5 0 1 0 6.5 13a6.465 6.465 0 0 0 3.839-1.263l5.205 5.204 1.414-1.414zM6.5 11C4.019 11 2 8.981 2 6.5S4.019 2 6.5 2 11 4.019 11 6.5 8.981 11 6.5 11z"/></svg>
+                </button>
                 <form class="hidden">
                   <input class="header-nav__search-input" type="search" placeholder="крем-брюле">
                 </form>
               </li>
-              <li class="header-nav__item header-nav__item--user header-nav__item--login"><a href="">Вход</a></li>
+              <li class="header-nav__item header-nav__item--user header-nav__item--login"><a href="">Вход
+              </a></li>
               <li class="header-nav__item header-nav__item--user header-nav__item--basket"><a href="">Корзина</a></li>
             </ul>
           </nav>
@@ -50,7 +53,7 @@
       <section class="offers">
         <h2 class="visually-hidden">Предложения</h2>
         <div class="slider">
-          <div class="slider-inner">
+          <div class="slider__inner">
             <div class="slider-slides slide-slides-1">
               <div class="slide-content">
                 <h3>Крем-брюле и пломбир с малиновым джемом</h3>
@@ -84,12 +87,12 @@
                   <img src="img/ice-cream-3.png" width="639" height="582" alt="Крем-брюле и пломбир с малиновым джемом">
                 </figure>
             </div>
-            <div class="radio-button">
-              <input class="slider-input slider-input-1" type="radio" id="slider-1" name="toggle" checked>
+            <div class="slider-controls">
+              <input class="visually-hidden slider-input slider-input-1" type="radio" id="slider-1" name="toggle" checked>
               <label class="slider-label slider-label-1" for="slider-1" aria-label="Слайдер1"></label>
-              <input class="slider-input slider-input-2" type="radio" id="slider-2" name="toggle">
+              <input class="visually-hidden slider-input slider-input-2" type="radio" id="slider-2" name="toggle">
               <label class="slider-label slider-label-2" for="slider-2" aria-label="Слайдер1"></label>
-              <input class="slider-input slider-input-3" type="radio" id="slider-3" name="toggle">
+              <input class="visually-hidden slider-input slider-input-3" type="radio" id="slider-3" name="toggle">
               <label class="slider-label slider-label-3" for="slider-3" aria-label="Слайдер1"></label>
             </div>
           </div>
@@ -116,8 +119,8 @@
               </div>
             </article>
           </li>
-          <li class="catalog__item">
-            <article class="box-catalog__inner catalog__item--hit">
+          <li class="catalog__item catalog__item--hit">
+            <article class="box-catalog__inner">
               <h3 class="catalog-item__title">Сливочно-кофейное с кусочками шоколада</h3>
               <p class="catalog-item__price">380 ₽<span>/кг</span></p>
               <div class="catalog-item__img">
@@ -125,8 +128,8 @@
               </div>
             </article>
           </li>
-          <li class="catalog__item">
-            <article class="box-catalog__inner catalog__item--hit">
+          <li class="catalog__item catalog__item--hit">
+            <article class="box-catalog__inner">
               <h3 class="catalog-item__title">Сливочно-клубничное с присыпкой из белого шоколада</h3>
               <p class="catalog-item__price">355 ₽<span>/кг</span></p>
               <div class="catalog-item__img">
@@ -134,8 +137,8 @@
               </div>
             </article>
           </li>
-          <li class="catalog__item">
-            <article class="box-catalog__inner catalog__item--hit">
+          <li class="catalog__item catalog__item--hit">
+            <article class="box-catalog__inner">
               <h3 class="catalog-item__title">Сливочное крем-брюле с карамельной подливкой</h3>
               <p class="catalog-item__price">415 ₽<span>/кг</span></p>
               <div class="catalog-item__img">
@@ -191,16 +194,16 @@
     <footer class="footer">
       <div class="footer__inner">
         <ul class="footer__socials-list">
-          <li class="socials__item"><a href="blank.html">
+          <li class="socials__item"><a class="socials__link" href="blank.html">
             <img src="img/fb.svg" width="32" height="32" aria-label="Фэйсбук">
           </a></li>
-          <li class="socials__item"><a href="blank.html">
+          <li class="socials__item"><a class="socials__link" href="blank.html">
             <img src="img/vk.svg" width="32" height="32" aria-label="ВКонтакте">
           </a></li>
-          <li class="socials__item"><a href="blank.html">
+          <li class="socials__item"><a class="socials__link" href="blank.html">
             <img src="img/instagram.svg" width="32" height="32" aria-label="Инстаграмм">
           </a></li>
-          <li class="socials__item"><a href="blank.html">
+          <li class="socials__item"><a class="socials__link" href="blank.html">
             <img src="img/twitter.svg" width="32" height="32" aria-label="Твиттер">
           </a></li>
         </ul>
