Добавлены hover-эффекты на главную страницу

--- a/index.html
+++ b/index.html
@@ -109,45 +109,51 @@
             <a class="stock-btn" href="blank.html">Хочу шокладки!</a>
           </div>
         </div>
+      </section>
+      <div class="catalog__wrap catalog__wrap--hit">
         <ul class="catalog catalog--hit">
           <li class="catalog__item catalog__item--hit">
-            <article class="box-catalog__inner">
-              <h3 class="catalog-item__title">Сливочное с апельсиновым джемом и цитрусовой стружкой</h3>
+            <article class="box-catalog__inner box-catalog__inner--hit">
+              <h3 class="catalog-item__title catalog-item__title--hit">Сливочное с апельсиновым джемом и цитрусовой стружкой</h3>
               <p class="catalog-item__price">310 ₽<span>/кг</span></p>
               <div class="catalog-item__img">
                 <img src="img/ice-1.png" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
               </div>
+              <a class="catalog-item__button" href="blank.html">Быстрый просмотр</a>
             </article>
           </li>
           <li class="catalog__item catalog__item--hit">
-            <article class="box-catalog__inner">
-              <h3 class="catalog-item__title">Сливочно-кофейное с кусочками шоколада</h3>
+            <article class="box-catalog__inner box-catalog__inner--hit">
+              <h3 class="catalog-item__title catalog-item__title--hit">Сливочно-кофейное с кусочками шоколада</h3>
               <p class="catalog-item__price">380 ₽<span>/кг</span></p>
               <div class="catalog-item__img">
                 <img src="img/ice-2.png" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
               </div>
+              <a class="catalog-item__button" href="blank.html">Быстрый просмотр</a>
             </article>
           </li>
           <li class="catalog__item catalog__item--hit">
-            <article class="box-catalog__inner">
-              <h3 class="catalog-item__title">Сливочно-клубничное с присыпкой из белого шоколада</h3>
+            <article class="box-catalog__inner box-catalog__inner--hit">
+              <h3 class="catalog-item__title catalog-item__title--hit">Сливочно-клубничное с присыпкой из белого шоколада</h3>
               <p class="catalog-item__price">355 ₽<span>/кг</span></p>
               <div class="catalog-item__img">
                 <img src="img/ice-3.png" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
               </div>
+              <a class="catalog-item__button" href="blank.html">Быстрый просмотр</a>
             </article>
           </li>
           <li class="catalog__item catalog__item--hit">
-            <article class="box-catalog__inner">
-              <h3 class="catalog-item__title">Сливочное крем-брюле с карамельной подливкой</h3>
+            <article class="box-catalog__inner box-catalog__inner--hit">
+              <h3 class="catalog-item__title catalog-item__title--hit">Сливочное крем-брюле с карамельной подливкой</h3>
               <p class="catalog-item__price">415 ₽<span>/кг</span></p>
               <div class="catalog-item__img">
                 <img src="img/ice-4.png" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
               </div>
+              <a class="catalog-item__button" href="blank.html">Быстрый просмотр</a>
             </article>
           </li>
         </ul>
-      </section>
+      </div>
       <div class="info__wrap">
         <section class="info">
           <h2 class="info__title">Магазин Глэйси – это онлайн и офлайн-магазин по продаже мороженого собственного проиводства на развес</h2>
@@ -195,16 +201,16 @@
       <div class="footer__inner">
         <ul class="footer__socials-list">
           <li class="socials__item"><a class="socials__link" href="blank.html">
-            <img src="img/fb.svg" width="32" height="32" aria-label="Фэйсбук">
+            <img src="img/fb.svg" width="32" height="32" alt="Фэйсбук">
           </a></li>
           <li class="socials__item"><a class="socials__link" href="blank.html">
-            <img src="img/vk.svg" width="32" height="32" aria-label="ВКонтакте">
+            <img src="img/vk.svg" width="32" height="32" alt="ВКонтакте">
           </a></li>
           <li class="socials__item"><a class="socials__link" href="blank.html">
-            <img src="img/instagram.svg" width="32" height="32" aria-label="Инстаграмм">
+            <img src="img/instagram.svg" width="32" height="32" alt="Инстаграмм">
           </a></li>
           <li class="socials__item"><a class="socials__link" href="blank.html">
-            <img src="img/twitter.svg" width="32" height="32" aria-label="Твиттер">
+            <img src="img/twitter.svg" width="32" height="32" alt="Твиттер">
           </a></li>
         </ul>
         <ul class="footer__block-group">
